--- a/package.json
+++ b/package.json
@@ -1,29 +1,80 @@
 {
-  "name": "my-new-app",
+  "name": "redemption_finder_frontend",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/preset-react": "^7.0.0-beta.51",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "enzyme-to-json": "^3.3.5",
+    "eslint-plugin-react": "^7.12.4",
+    "webpack-bundle-analyzer": "^4.4.0"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "axios": "^0.18.0",
+    "copy-webpack-plugin": "^6.4.0",
+    "country-state-city": "^3.0.1",
+    "firebase": "^6.1.1",
+    "http-proxy-middleware": "^0.19.1",
+    "jwt-decode": "^3.1.2",
+    "leaflet": "^1.7.1",
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.0",
+    "npm": "^6.12.1",
+    "postcode-validator": "^3.5.3",
+    "prop-types": "^15.7.2",
+    "public-ip": "^4.0.3",
+    "rc-tree-select": "^2.9.1",
+    "react": "^16.8.6",
+    "react-app-rewired": "^2.1.8",
+    "react-apple-signin-auth": "0.0.6",
+    "react-dates": "^21.3.2",
+    "react-day-picker": "^7.4.8",
+    "react-device-detect": "^1.9.9",
+    "react-dom": "^16.8.6",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.3",
+    "react-helmet": "^5.2.1",
+    "react-html-parser": "^2.0.2",
+    "react-input-mask": "^2.0.4",
+    "react-intl": "^5.12.3",
+    "react-leaflet": "^2.7.0",
+    "react-otp-input": "^2.0.2",
+    "react-redux": "^6.0.1",
+    "react-responsive-carousel": "^3.2.12",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "^3.0.0",
+    "react-select": "^3.1.0",
+    "react-slick": "^0.25.2",
+    "react-snapshot": "^1.3.0",
+    "react-toastify": "^5.3.1",
+    "react-tooltip": "^4.2.6",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.5",
+    "redux-segment": "^1.6.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.2",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^4.3.2",
+    "uuid": "^8.3.2",
+    "webpack-obfuscator": "^1.8.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build && npm run build-sw",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "start": "react-app-rewired start",
+    "build": "GENERATE_SOURCEMAP=false react-app-rewired build && npm run build-sw",
     "build-sw": "node ./src/sw-build.js",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "npm run build && firebase deploy",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject",
+    "analyse": "node analyse.js"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -35,6 +86,29 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "collectCoverage": true,
+    "clearMocks": true,
+    "notify": true,
+    "verbose": true,
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "setupFiles": [
+      "<rootDir>/test-env.js",
+      "<rootDir>/jest-setup.js"
+    ],
+    "moduleNameMapper": {
+      "^.+\\.(css|less|scss)$": "babel-jest",
+      ".*\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>test-env.js"
+    },
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/"
     ]
   }
 }
